--- a/index.html
+++ b/index.html
@@ -4,74 +4,106 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NewZealand Dairy| HomePage</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
             <nav class="navbar">
                 <ul>
-                    <li><a class="nav_tag_home" href="/index.html">Home</a></li>
-                    <li><a class="nav_link" href="/dariy_products.html">NewZealand Dairy Products</a></li>
-                    <li><a class="nav_link" href="/development.html">NewZealand Dairy development</a></li>
+                    <li><a class="nav_tag_home" href="index.html">Home</a></li>
+                    <li><a class="nav_link" href="dariy_products.html">NewZealand Dairy Products</a></li>
+                    <li><a class="nav_link" href="development.html">NewZealand Dairy development</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section class="hero_img">
                 <h1 class="hero_topic">
+                    <br>
                     Welcome to NZ Dairy
                     <br>
                     Pure Taste from New Zealand
                 </h1>
             </section>
-               <br>
+            <br>
             <img class="img-1" src="/Dairy-img/milk-outside.jpg" alt="milk_outside">
             <p class="p_1">
                 New Zealand is renowned for its pristine landscapes, fresh air, and clean water. 
-                <br>
                 Dairy cows graze freely on lush pastures all year round, producing milk that is naturally rich and nutritious.
-                <br>
                 Strict food safety and quality regulations ensure every step — from pasture to processing — meets the highest standards. 
-                <br>
                 New Zealand dairy consistently matches or exceeds international benchmarks for nutrition, safety, and traceability.
-                <br>
                 Over 95% of New Zealand’s dairy cows are grass-fed. 
-                <br>
-                This results in milk with higher levels of Omega-3 fatty acids, beta-carotene, and vitamin E, offering natural health benefits that global consumers value.
-                <br>
             </p>
             <br>
             <br>
-            <p class="p_mid">
-                New Zealand is home to some of the world’s best dairy products. 
-                <br>
-                With its fresh pastures, clean air, and pure water, NZ dairy has earned global recognition for its quality, safety, and nutrition.
-            </p>
-            <img class="img-2" src="/Dairy-img/view-allergens-commonly-found-dairy.jpg" alt="view-allergens-commonly-found-dairy">
-            <img class="img-3" src="/Dairy-img/dairy-products.jpg" alt="dairy-products">
+            <div class="mid_background">
+                <p class="p_mid">
+                    New Zealand is home to some of the world’s best dairy products. 
+                    <br>
+                    With its fresh pastures, clean air, and pure water, NZ dairy has earned global recognition for its quality, safety, and nutrition.
+                </p>
+            </div>
+            <img  class="img-mid" src="Dairy-img/feed-supplements-silage-1500x1000.webp" alt="view-allergens-commonly-found-dairy">
+            <img  class="img-mid" src="Dairy-img/adobestock_187410014.webp" alt="dairy-products">
             <br>
             <br>
-            <p class="p_mid">
-                At NZ Dairy, we care not only about quality but also about the planet. 
-                <br>
-                Our farmers use sustainable practices to protect the land, the animals, and future generations.
-            </p>
             <br>
-            <p class="p_2">
+            <br>
+            <div class="mid_background">
+                <p class="p_mid">
+                    At NZ Dairy, we care not only about quality but also about the planet. 
+                    <br>
+                    Our farmers use sustainable practices to protect the land, the animals, and future generations.
+                </p>
+            </div>
+            <br>
+            <img class="img-1" src="Dairy-img/dairynz-wintercrop-2019-175-4f8a182a-7e69-4d32-ade3eeea217b7595-resized-1500x1000.webp" alt="milk_outside">
+            <p class="p_1">
                 New Zealand dairy farming embraces sustainable practices — from reducing carbon emissions and recycling water to minimizing plastic use. With a strong focus on working in harmony with nature, the industry promotes an eco-friendly image worldwide.
-                <br>
                 Producing far more than the local market requires, New Zealand is one of the world’s leading dairy exporters. Companies like Fonterra operate across continents, ensuring consistent supply and strong international partnerships.
-                <br>
-                With over a century of dairy expertise, New Zealand has earned a reputation for excellence. “New Zealand milk” is globally recognized as a symbol of purity, safety, and premium quality.
-                <br>
             </p>
-            <a href="https://overthemoondairy.co.nz/?srsltid=AfmBOopATYy7MBuIexAVz8CC2_kSbKUsTOPinQ9lRVibejBfMuYXgE40">
-                <button>
-                    Book now
-                </button>
-                <br>
-                <br>
-            </a>
+            <br>
+            <br>            
         </main>
+        <footer>
+            <div class="learn_more_background">
+                <p class="p_footer_learn_more">
+                    if you interesting more information, please click
+                </p>
+                <div class="parent_learn_more">
+                    <div class="grid_learn_more">
+                        <a href="https://www.dairynz.co.nz/" target="_blank">
+                            <button class="button_learn_more">
+                                Learn more
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div> 
+            <!-- book -->
+            <div class="p_book_topic_background">
+                <h1 class="topic_footer_book">
+                    information - NZ dairy:
+                </h1>
+                <hr>
+                <p class="p_book_infor">
+                    Email: 22222w@duck.com
+                    <br>
+                    Call: 0800 4 324 7969 
+                </p>
+                <p class="p_book">
+                    If you want to buy some cheese:
+                </p>
+                <div class="parent_book">
+                    <div class=" grid_book">
+                        <a href="https://overthemoondairy.co.nz/?srsltid=AfmBOopATYy7MBuIexAVz8CC2_kSbKUsTOPinQ9lRVibejBfMuYXgE40" target="_blank">
+                            <button class="button_book">
+                                Book now
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
