--- a/development.html
+++ b/development.html
@@ -1,6 +1,77 @@
 <!DOCTYPE html>
-<html>
-    <head></head>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>NewZealand Dairy| HomePage</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li><a class="nav_tag_home" href="index.html">Home</a></li>
+                    <li><a class="nav_link" href="dariy_products.html">NewZealand Dairy Products</a></li>
+                    <li><a class="nav_link" href="development.html">NewZealand Dairy development</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <img class="img-1" src="Dairy-img/截屏2025-10-07 10.40.15.png" alt="milk_outside">
+            <p class="p_1">
+                At New Zealand Dairy, we care not only about the quality of our products,
+                <br>
+                but also about the future of our planet. Our farms in New Zealand use sustainable farming practices to protect the land, 
+                <br>
+                animals, and the environment, ensuring healthy, delicious food is passed down for generations.
+            </p>
+
+
+
+
+            
+
+            
+        </main>
+        <footer>
+            <div class="learn_more_background">
+                <p class="p_footer_learn_more">
+                    if you interesting more information, please click
+                </p>
+                <div class="parent_learn_more">
+                    <div class="grid_learn_more">
+                        <a href="https://www.dairynz.co.nz/" target="_blank">
+                            <button class="button_learn_more">
+                                Learn more
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div> 
+            <!-- book -->
+            <div class="p_book_topic_background">
+                <h1 class="topic_footer_book">
+                    information - NZ dairy:
+                </h1>
+                <hr>
+                <p class="p_book_infor">
+                    Email: 22222w@duck.com
+                    <br>
+                    Call: 0800 4 324 7969 
+                </p>
+                <p class="p_book">
+                    If you want to buy some cheese:
+                </p>
+                <div class="parent_book">
+                    <div class=" grid_book">
+                        <a href="https://overthemoondairy.co.nz/?srsltid=AfmBOopATYy7MBuIexAVz8CC2_kSbKUsTOPinQ9lRVibejBfMuYXgE40" target="_blank">
+                            <button class="button_book">
+                                Book now
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
