--- a/dariy_products.html
+++ b/dariy_products.html
@@ -24,25 +24,36 @@
                     The NewZealand Dairy Products 
                 </h1>
             </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            
+            <div class="mid_background">
+                <p class="p_mid">
+                    New Zealand builds a global reputation for “pure, grass-fed, and sustainable” dairy.
+                </p>
+            </div>
+            <img class="img-1" src="Dairy-img/cheese-platter.jpg" alt="milk_outside">
+            <p class="p_1">
+                At NZ Dairy, we care not only about quality but also about the planet. Our farmers use sustainable practices to protect the land, the animals, and future generations.
+            </p>
+            <br>
+            <div class="img_mid_three_parent">
+                <div class="img_mid_grid_three-1">
+                    <img class="mid_mig_three" src="Dairy-img/cheese.jpg" alt="cheese">
+                    <p class="mid_img_p">
+                         Made from grass-fed milk, New Zealand butter is known for its rich flavor and natural golden color.As early as the mid-19th century, New Zealand exported butter to Britain. Salted butter was common to withstand long sea voyages. By the 20th century, its purity and taste earned a strong reputation in Europe.
+                    </p>
+                </div>
+                <div class="img_mid_grid_three-2">
+                    <img class="mid_mig_three" src="Dairy-img/dairy-products.jpg" alt="dairy-products">
+                    <p class="mid_img_p">
+                        Cheddar is the most iconic, offering a mild, consistent taste. In recent years, New Zealand has also developed specialty cheeses like blue cheese and brie. British settlers in the late 19th century introduced traditional cheesemaking. By the early 20th century, cheddar cheese became one of New Zealand’s most important exports.
+                    </p>
+                </div>
+                <div class="img_mid_grid_three-3">
+                    <img class="mid_mig_three" src="Dairy-img/view-allergens-commonly-found-dairy.jpg" alt="view-allergens-commonly-found-dairy">
+                    <p class="mid_img_p">
+                        A cornerstone of New Zealand’s dairy exports, milk powder is easy to store and transport, making it highly demanded worldwide.Milk powder production began in the early 20th century. During World War II, New Zealand milk powder was shipped in large volumes to Allied forces, becoming an essential wartime supply.
+                    </p>
+                </div>
+            </div>  
         </main>
         <footer>
             <div class="learn_more_background">
