--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </h1>
             </section>
             <br>
-            <img class="img-1" src="/Dairy-img/milk-outside.jpg" alt="milk_outside">
+            <img class="img-1" src="Dairy-img/milk-outside.jpg" alt="milk_outside">
             <p class="p_1">
                 New Zealand is renowned for its pristine landscapes, fresh air, and clean water. 
                 Dairy cows graze freely on lush pastures all year round, producing milk that is naturally rich and nutritious.
