--- a/dariy_products.html
+++ b/dariy_products.html
@@ -31,7 +31,7 @@
             </div>
             <img class="img-1" src="Dairy-img/cheese-platter.jpg" alt="milk_outside">
             <p class="p_1">
-                At NZ Dairy, we care not only about quality but also about the planet. Our farmers use sustainable practices to protect the land, the animals, and future generations.
+                At NZ Dairy, we care not only about quality but also about the planet. Our farmers use sustainable practices to protect the land, the animals, and future generations. We understand that healthy land is the cornerstone of producing high-quality dairy products. Therefore, NZ Dairy farmers actively implement measures such as rotational grazing, water resource management, and carbon emission reduction to ensure our farms coexist harmoniously with nature. 
             </p>
             <br>
             <div class="img_mid_three_parent">
@@ -53,7 +53,8 @@
                         A cornerstone of New Zealand’s dairy exports, milk powder is easy to store and transport, making it highly demanded worldwide.Milk powder production began in the early 20th century. During World War II, New Zealand milk powder was shipped in large volumes to Allied forces, becoming an essential wartime supply.
                     </p>
                 </div>
-            </div>  
+            </div>
+            
         </main>
         <footer>
             <div class="learn_more_background">
