--- a/development.html
+++ b/development.html
@@ -17,6 +17,13 @@
             </nav>
         </header>
         <main>
+            <section class="hero_img_development">
+                <h1 class="hero_topic_dairy_products">
+                    <br>
+                    <br>
+                    The NewZealand Dairy Products 
+                </h1>
+            </section>
             <img class="img-1" src="Dairy-img/截屏2025-10-07 10.40.15.png" alt="milk_outside">
             <p class="p_1">
                 At New Zealand Dairy, we care not only about the quality of our products,
@@ -24,6 +31,9 @@
                 animals, and the environment, ensuring healthy, delicious food is passed down for generations.
                 
             </p>
+            <br>
+            <br>
+            <br>
             <br>
             <br>
             <br>
@@ -66,6 +76,11 @@
             <br>
             <br>
             <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </main>
         <footer>
             <div class="learn_more_background">
@@ -81,7 +96,7 @@
                         </a>
                     </div>
                 </div>
-            </div> 
+            </div>
             <!-- book -->
             <div class="p_book_topic_background">
                 <h1 class="topic_footer_book">
