--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
             </p>
             <br>
             <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <div class="mid_background">
                 <p class="p_mid">
                     New Zealand is home to some of the world’s best dairy products. 
@@ -66,6 +73,11 @@
             <br>            
         </main>
         <footer>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <div class="learn_more_background">
                 <p class="p_footer_learn_more">
                     if you interesting more information, please click
@@ -87,7 +99,7 @@
                 </h1>
                 <hr>
                 <p class="p_book_infor">
-                    Email: 22222w@duck.com
+                    Email: 2222w@duck.com
                     <br>
                     Call: 0800 4 324 7969 
                 </p>
@@ -98,7 +110,7 @@
                     <div class=" grid_book">
                         <a href="https://overthemoondairy.co.nz/?srsltid=AfmBOopATYy7MBuIexAVz8CC2_kSbKUsTOPinQ9lRVibejBfMuYXgE40" target="_blank">
                             <button class="button_book">
-                                Book now
+                                Buy now
                             </button>
                         </a>
                     </div>
