--- a/dariy_products.html
+++ b/dariy_products.html
@@ -38,19 +38,18 @@
                 <div class="img_mid_grid_three-1">
                     <img class="mid_mig_three" src="Dairy-img/cheese.jpg" alt="cheese">
                     <p class="mid_img_p">
-                         Made from grass-fed milk, New Zealand butter is known for its rich flavor and natural golden color.As early as the mid-19th century, New Zealand exported butter to Britain. Salted butter was common to withstand long sea voyages. By the 20th century, its purity and taste earned a strong reputation in Europe.
-                    </p>
+                         Made from grass-fed milk, New Zealand butter is known for its rich flavor and natural golden color.As early as the mid-19th century, New Zealand exported butter to Britain. 
                 </div>
                 <div class="img_mid_grid_three-2">
                     <img class="mid_mig_three" src="Dairy-img/dairy-products.jpg" alt="dairy-products">
                     <p class="mid_img_p">
-                        Cheddar is the most iconic, offering a mild, consistent taste. In recent years, New Zealand has also developed specialty cheeses like blue cheese and brie. British settlers in the late 19th century introduced traditional cheesemaking. By the early 20th century, cheddar cheese became one of New Zealand’s most important exports.
+                        Cheddar is the most iconic, offering a mild, consistent taste. In recent years, New Zealand has also developed specialty cheeses like blue cheese and brie. 
                     </p>
                 </div>
                 <div class="img_mid_grid_three-3">
                     <img class="mid_mig_three" src="Dairy-img/view-allergens-commonly-found-dairy.jpg" alt="view-allergens-commonly-found-dairy">
                     <p class="mid_img_p">
-                        A cornerstone of New Zealand’s dairy exports, milk powder is easy to store and transport, making it highly demanded worldwide.Milk powder production began in the early 20th century. During World War II, New Zealand milk powder was shipped in large volumes to Allied forces, becoming an essential wartime supply.
+                        A cornerstone of New Zealand’s dairy exports, milk powder is easy to store and transport, making it highly demanded worldwide.Milk powder production began in the early 20th century. 
                     </p>
                 </div>
             </div>
@@ -59,7 +58,7 @@
         <footer>
             <div class="learn_more_background">
                 <p class="p_footer_learn_more">
-                    if you interesting more information, please click
+                    if you interested more information, please click
                 </p>
                 <div class="parent_learn_more">
                     <div class="grid_learn_more">
@@ -78,22 +77,12 @@
                 </h1>
                 <hr>
                 <p class="p_book_infor">
-                    Email: 22222w@duck.com
+                    Email: nzdairy2025@gmail.com
                     <br>
                     Call: 0800 4 324 7969 
                 </p>
-                <p class="p_book">
-                    If you want to buy some cheese:
-                </p>
-                <div class="parent_book">
-                    <div class=" grid_book">
-                        <a href="https://overthemoondairy.co.nz/?srsltid=AfmBOopATYy7MBuIexAVz8CC2_kSbKUsTOPinQ9lRVibejBfMuYXgE40" target="_blank">
-                            <button class="button_book">
-                                Book now
-                            </button>
-                        </a>
-                    </div>
-                </div>
+                <br>
+                <br>
             </div>
         </footer>
     </body>
