--- a/development.html
+++ b/development.html
@@ -52,7 +52,7 @@
                 <div class="img_mid_grid_three-1">
                     <img class="mid_mig_three-2" src="Dairy-img/hot-chocolate.jpg" alt="hot-chocolate">
                     <p class="mid_img_p-2">
-                        Around 95% of New Zealand’s dairy cows are grass-fed, reducing the need for grain-based feed and the associated emissions from cultivation and transport. Pasture-based systems put less pressure on land, while supporting healthier soils and biodiversity.
+                        Around 95% of New Zealand’s dairy cows are grass-fed, reducing the need for grain-based feed and the associated emissions from cultivation and transport. 
                     </p>
                 </div>
                 <div class="img_mid_grid_three-2">
@@ -64,13 +64,13 @@
                 <div class="img_mid_grid_three-3">
                     <img class="mid_mig_three-2" src="Dairy-img/business-setting.webp" alt="view-allergens-commonly-found-dairy">
                     <p class="mid_img_p-2">
-                        Precision irrigation, riparian planting, and nutrient management help protect rivers and lakes.Many farms take part in “Sustainable Water Programs” to ensure long-term freshwater health.
+                        Precision irrigation, riparian planting, and nutrient management help protect rivers and lakes.
                     </p>
                 </div>
             </div>
             <img class="img-1" src="Dairy-img/writing.webp" alt="milk_outside">
             <p class="p_1">
-                With its cooperative business model, New Zealand dairy ensures farmers share directly in profits, supporting stable rural livelihoods.The industry contributes to rural development, infrastructure, and local employment.Pasture-based systems not only benefit the environment but also improve animal welfare.The Animal Welfare Act sets high standards for care, ensuring dairy cows are healthy and well-treated.
+                With its cooperative business model, New Zealand dairy ensures farmers share directly in profits, supporting stable rural livelihoods.The industry contributes to rural development, infrastructure, and local employment.Pasture-based systems not only benefit the environment but also improve animal welfare.
             </p>
             <br>
             <br>
@@ -85,7 +85,7 @@
         <footer>
             <div class="learn_more_background">
                 <p class="p_footer_learn_more">
-                    if you interesting more information, please click
+                    if you interested more information, please click
                 </p>
                 <div class="parent_learn_more">
                     <div class="grid_learn_more">
@@ -104,22 +104,12 @@
                 </h1>
                 <hr>
                 <p class="p_book_infor">
-                    Email: 22222w@duck.com
+                    Email: nzdairy2025@gmail.com
                     <br>
                     Call: 0800 4 324 7969 
                 </p>
-                <p class="p_book">
-                    If you want to buy some cheese:
-                </p>
-                <div class="parent_book">
-                    <div class=" grid_book">
-                        <a href="https://overthemoondairy.co.nz/?srsltid=AfmBOopATYy7MBuIexAVz8CC2_kSbKUsTOPinQ9lRVibejBfMuYXgE40" target="_blank">
-                            <button class="button_book">
-                                Book now
-                            </button>
-                        </a>
-                    </div>
-                </div>
+                <br>
+                <br>
             </div>
         </footer>
     </body>
