--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                 Dairy cows graze freely on lush pastures all year round, producing milk that is naturally rich and nutritious.
                 Strict food safety and quality regulations ensure every step — from pasture to processing — meets the highest standards. 
                 New Zealand dairy consistently matches or exceeds international benchmarks for nutrition, safety, and traceability.
-                Over 95% of New Zealand’s dairy cows are grass-fed. 
             </p>
             <br>
             <br>
@@ -67,7 +66,7 @@
             <img class="img-1" src="Dairy-img/dairynz-wintercrop-2019-175-4f8a182a-7e69-4d32-ade3eeea217b7595-resized-1500x1000.webp" alt="milk_outside">
             <p class="p_1">
                 New Zealand dairy farming embraces sustainable practices — from reducing carbon emissions and recycling water to minimizing plastic use. With a strong focus on working in harmony with nature, the industry promotes an eco-friendly image worldwide.
-                Producing far more than the local market requires, New Zealand is one of the world’s leading dairy exporters. Companies like Fonterra operate across continents, ensuring consistent supply and strong international partnerships.
+                Producing far more than the local market requires, New Zealand is one of the world’s leading dairy exporters. 
             </p>
             <br>
             <br>            
@@ -80,7 +79,7 @@
             <br>
             <div class="learn_more_background">
                 <p class="p_footer_learn_more">
-                    if you interesting more information, please click
+                    if you interested more information, please click
                 </p>
                 <div class="parent_learn_more">
                     <div class="grid_learn_more">
@@ -99,22 +98,12 @@
                 </h1>
                 <hr>
                 <p class="p_book_infor">
-                    Email: 2222w@duck.com
+                    Email: nzdairy2025@gmail.com
                     <br>
                     Call: 0800 4 324 7969 
                 </p>
-                <p class="p_book">
-                    If you want to buy some cheese:
-                </p>
-                <div class="parent_book">
-                    <div class=" grid_book">
-                        <a href="https://overthemoondairy.co.nz/?srsltid=AfmBOopATYy7MBuIexAVz8CC2_kSbKUsTOPinQ9lRVibejBfMuYXgE40" target="_blank">
-                            <button class="button_book">
-                                Buy now
-                            </button>
-                        </a>
-                    </div>
-                </div>
+                <br>
+                <br>
             </div>
         </footer>
     </body>
