--- a/dariy_products.html
+++ b/dariy_products.html
@@ -18,18 +18,18 @@
         </header>
         <main>
             <section class="hero_img_dairy_products">
-                <h1 class="hero_topic_dairy_products">
+                <h2 class="hero_topic_dairy_products">
                     <br>
                     <br>
                     The NewZealand Dairy Products 
-                </h1>
+                </h2>
             </section>
             <div class="mid_background">
                 <p class="p_mid">
                     New Zealand builds a global reputation for “pure, grass-fed, and sustainable” dairy.
                 </p>
             </div>
-            <img class="img-1" src="Dairy-img/cheese-platter.jpg" alt="milk_outside">
+            <img class="img-1" src="Dairy-img/cheese-platter.jpg" alt="cheese-platter">
             <p class="p_1">
                 At NZ Dairy, we care not only about quality but also about the planet. Our farmers use sustainable practices to protect the land, the animals, and future generations. We understand that healthy land is the cornerstone of producing high-quality dairy products. Therefore, NZ Dairy farmers actively implement measures such as rotational grazing, water resource management, and carbon emission reduction to ensure our farms coexist harmoniously with nature. 
             </p>
@@ -58,18 +58,14 @@
         <footer>
             <div class="learn_more_background">
                 <p class="p_footer_learn_more">
-                    if you interested more information, please click
+                    If you are interested in more information, please click
                 </p>
                 <div class="parent_learn_more">
-                    <div class="grid_learn_more">
-                        <a href="https://www.dairynz.co.nz/" target="_blank">
-                            <button class="button_learn_more">
-                                Learn more
-                            </button>
-                        </a>
-                    </div>
+                    <a class="button_learn_more" href="https://www.dairynz.co.nz/" target="_blank">
+                        Learn more
+                    </a>
                 </div>
-            </div> 
+            </div>
             <!-- book -->
             <div class="p_book_topic_background">
                 <h1 class="topic_footer_book">
