--- a/development.html
+++ b/development.html
@@ -18,13 +18,13 @@
         </header>
         <main>
             <section class="hero_img_development">
-                <h1 class="hero_topic_dairy_products">
+                <h2 class="hero_topic_dairy_products">
                     <br>
                     <br>
                     The NewZealand Dairy Products 
-                </h1>
+                </h2>
             </section>
-            <img class="img-1" src="Dairy-img/截屏2025-10-07 10.40.15.png" alt="milk_outside">
+            <img class="img-1" src="Dairy-img/cows.png" alt="cows">
             <p class="p_1">
                 At New Zealand Dairy, we care not only about the quality of our products,
                 but also about the future of our planet. Our farms in New Zealand use sustainable farming practices to protect the land, 
@@ -85,16 +85,12 @@
         <footer>
             <div class="learn_more_background">
                 <p class="p_footer_learn_more">
-                    if you interested more information, please click
+                    If you are interested in more information, please click
                 </p>
                 <div class="parent_learn_more">
-                    <div class="grid_learn_more">
-                        <a href="https://www.dairynz.co.nz/" target="_blank">
-                            <button class="button_learn_more">
-                                Learn more
-                            </button>
-                        </a>
-                    </div>
+                    <a class="button_learn_more" href="https://www.dairynz.co.nz/" target="_blank">
+                        Learn more
+                    </a>
                 </div>
             </div>
             <!-- book -->
