--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </header>
         <main>
             <section class="hero_img">
-                <h1 class="hero_topic">
+                <h2 class="hero_topic">
                     <br>
                     Welcome to NZ Dairy
                     <br>
                     Pure Taste from New Zealand
-                </h1>
+                </h2>
             </section>
             <br>
             <img class="img-1" src="Dairy-img/milk-outside.jpg" alt="milk_outside">
@@ -79,18 +79,14 @@
             <br>
             <div class="learn_more_background">
                 <p class="p_footer_learn_more">
-                    if you interested more information, please click
+                    If you are interested in more information, please click
                 </p>
                 <div class="parent_learn_more">
-                    <div class="grid_learn_more">
-                        <a href="https://www.dairynz.co.nz/" target="_blank">
-                            <button class="button_learn_more">
-                                Learn more
-                            </button>
-                        </a>
-                    </div>
+                    <a class="button_learn_more" href="https://www.dairynz.co.nz/" target="_blank">
+                        Learn more
+                    </a>
                 </div>
-            </div> 
+            </div>
             <!-- book -->
             <div class="p_book_topic_background">
                 <h1 class="topic_footer_book">
